--- a/flaskr/supervisor.conf
+++ b/flaskr/supervisor.conf
@@ -145,7 +145,17 @@ command=/usr/local/bin/gunicorn -w4 -b0.0.0.0:5000 hello:app
 directory=/home/yuan/daily_news/flaskr
 startsecs=0
 stopwaitsecs=0
-autostart=false
-autorestart=false
+autostart=true
+autorestart=true
 stdout_logfile=/home/yuan/daily_news/flaskr/log/gunicorn.log
 stderr_logfile=/home/yuan/daily_news/flaskr/log/gunicorn.err
+
+[program:run]
+command=/usr/local/bin/gunicorn -w4 -b0.0.0.0:5001 run:app
+directory=/home/yuan/daily_news/flaskr_back
+startsecs=0
+stopwaitsecs=0
+autostart=true
+autorestart=true
+stdout_logfile=/home/yuan/daily_news/flaskr/log/back.log
+stderr_logfile=/home/yuan/daily_news/flaskr/log/back.err
